workloads/default/rgv.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: rgv
  namespace: default
  labels:
    app: rgv

spec:
  gateways:
    - primary.istio-system
    - secondary.istio-system
  hosts:
    - rgv.stevenxie.me
    - rgv.stevenxie.com
  http:
    - match:
        - authority:
            exact: rgv.stevenxie.com
      redirect:
        authority: rgv.stevenxie.me
    - match:
        - uri:
            prefix: /api
      rewrite:
        uri: /
      route:
        - destination:
            host: rgv-api
          headers:
            response:
              set:
                X-Service: rgv-api
    - route:
        - destination:
            host: rgv-frontend
          headers:
            response:
              set:
                X-Service: rgv-frontend
